--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 STORAGE_MODE=array
+
+EMAIL_USER =
+ADMIN_EMAIL=
+
+MAILTRAP_HOST=sandbox.smtp.mailtrap.io
+MAILTRAP_PORT=2525
+MAILTRAP_USER=
+MAILTRAP_PASS=
